@@ -1,5 +1,3 @@
-AUTOMAKE_OPTIONS=dejagnu
-
 sbin_PROGRAMS =
 pkglib_LTLIBRARIES = 
 
@@ -90,6 +88,10 @@ if ENABLE_IMTEMPLATE
 SUBDIRS += plugins/imtemplate
 endif
 
+if ENABLE_OMSTDOUT
+SUBDIRS += plugins/omstdout
+endif
+
 if ENABLE_OMTEMPLATE
 SUBDIRS += plugins/omtemplate
 endif
@@ -120,5 +122,5 @@ SUBDIRS += tests
 # temporarily be removed below. The intent behind forcing everthing to compile
 # in a make distcheck is so that we detect code that accidently was not updated
 # when some global update happened.
-DISTCHECK_CONFIGURE_FLAGS=--enable-gssapi_krb5 --enable-imfile --enable-snmp --enable-pgsql --enable-libdbi --enable-mysql --enable-omtemplate --enable-imtemplate --enable-relp --enable-rsyslogd --enable-mail --enable-klog  --enable-diagtools --enable-gnutls
+DISTCHECK_CONFIGURE_FLAGS=--enable-gssapi_krb5 --enable-imfile --enable-snmp --enable-pgsql --enable-libdbi --enable-mysql --enable-omtemplate --enable-imtemplate --enable-relp --enable-rsyslogd --enable-mail --enable-klog  --enable-diagtools --enable-gnutls --enable-omstdout
 ACLOCAL_AMFLAGS = -I m4
